# frictionless-geojson

./: LEAD.md  Makefile  README.md  pyproject.toml
.github/workflows/: general.yaml
frictionless_geojson/: __init__.py  control.py  parser.py  plugin.py
tests/: conftest.py  helpers.py  test_control.py  test_parser.py  test_resource.py
